Minor fixes for spacing problems between sections in company.html and events.html.

--- a/Tabs_N_Blanks/css/company.css
+++ b/Tabs_N_Blanks/css/company.css
@@ -19,10 +19,7 @@ box-sizing: border-box;
 
 
 	#about-us {
-		margin-top: 3em;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 3em;
+		margin: 5em auto;
 
 		width: 70%;
 		text-align: center;
@@ -150,10 +147,11 @@ box-sizing: border-box;
 	@media (max-width: 46em) {
 		#contact-us {
 			width: 90%;
+			margin-top: 3em;
 		}
 
 		#contact-us p {
-			width: 70%;
+			width: 85%;
 		}
 
 		.contact-form .grid-col-5of10 {
